--- a/css/bookings.css
+++ b/css/bookings.css
@@ -222,74 +222,25 @@ tr.bookacti-booking-list-selected-row								{ background-color: rgba( 65, 143, 
 
 
 /** DIALOGS **/
-.bookacti-dialog,
-.bookacti-dialog .ui-dialog-content { overflow: visible; }
-.bookacti-dialog ~ .ui-widget-overlay { 
-    position: fixed;
-    top: 0; 
-    left: 0; 
-    width:100%;
-    height:100%;
-    background: #aaa;
-    opacity: 0.4;  
-    z-index: 1;
-}
-	
-	/* BUTTONS */
-	.bookacti-dialog .ui-dialog-buttonpane { padding: .3em 1em .5em 1em !important; }
-	.bookacti-dialog .ui-dialog-buttonpane .ui-dialog-buttonset { float: none !important; text-align: right; }
-	
-	.bookacti-dialog .ui-widget-header .ui-button.bookacti-dialog-left-button,
-	.bookacti-dialog .ui-widget-content .ui-button.bookacti-dialog-left-button,
-	.bookacti-dialog .ui-button.bookacti-dialog-left-button { float: left; }
-	
-	/* Delete button */
-	.bookacti-dialog .ui-widget-header .ui-button.bookacti-dialog-delete-button,
-	.bookacti-dialog .ui-widget-content .ui-button.bookacti-dialog-delete-button,
-	.bookacti-dialog .ui-button.bookacti-dialog-delete-button {
-		border: 1px solid #a00;
-		color: #a00;
-		background: #fcf1f1;
-	}
-	
-	.bookacti-dialog .ui-widget-header .ui-state-hover.bookacti-dialog-delete-button,
-	.bookacti-dialog .ui-widget-content .ui-state-hover.bookacti-dialog-delete-button,
-	.bookacti-dialog .ui-state-hover.bookacti-dialog-delete-button {
-		border: 1px solid #dc3232;
-		color: #dc3232;
-		background: #fcf1f1;
-	}
-	
-	.bookacti-dialog .ui-widget-header .ui-state-focus.bookacti-dialog-delete-button,
-	.bookacti-dialog .ui-widget-content .ui-state-focus.bookacti-dialog-delete-button,
-	.bookacti-dialog .ui-state-focus.bookacti-dialog-delete-button { 
-		border-color: #dc3232; 
-		color: #dc3232; 
-		box-shadow: 0 0 0 1px #dc3232;
-		outline: 2px solid transparent;
-		outline-offset: 0;
-	}
-	
-	
-	/* BOOKING ACTIONS DIALOGS */
-	#bookacti-refund-amount-container,
-	#bookacti-refund-options-title, 
-	.bookacti-refund-option							{ margin-bottom: 15px; }
-	.bookacti-refund-options						{ display: table; }
-	.bookacti-refund-option							{ display: table-row; }
-	.bookacti-refund-option-radio, 
-	.bookacti-refund-option-text					{ display: table-cell; vertical-align: middle; }
-	.bookacti-refund-option-text					{ padding: 0 0 15px 15px; }
-	.bookacti-refund-option-label					{ font-weight: bold; margin-right: 2px; }
-	.bookacti-refund-option-label::after			{ content: ': '; }
-	.bookacti-refund-option-description				{ font-size: 0.85em; font-style: italic; }
-	.bookacti-refund-option-label,
-	.bookacti-refund-option-description				{ display: block; }
-	#bookacti-refund-message textarea				{ display: block; width: 100%; }
-	
-	#bookacti-reschedule-booking-dialog label:not(.bookacti-onoffswitch-label),
-	.bookacti-backend-dialog.bookacti-bookings-dialog label:not(.bookacti-onoffswitch-label):not(.bookacti-refund-option-label) { display: inline-block; width: 150px; font-family: Arial,Helvetica,sans-serif; font-weight: bold; }
-	.bookacti-backend-dialog.bookacti-bookings-dialog label.bookacti-fullwidth-label:not(.bookacti-onoffswitch-label):not(.bookacti-refund-option-label) { width: 100%; }
+/* BOOKING ACTIONS DIALOGS */
+#bookacti-refund-amount-container,
+#bookacti-refund-options-title, 
+.bookacti-refund-option              { margin-bottom: 15px; }
+.bookacti-refund-options             { display: table; }
+.bookacti-refund-option              { display: table-row; }
+.bookacti-refund-option-radio, 
+.bookacti-refund-option-text         { display: table-cell; vertical-align: middle; }
+.bookacti-refund-option-text         { padding: 0 0 15px 15px; }
+.bookacti-refund-option-label        { font-weight: bold; margin-right: 2px; }
+.bookacti-refund-option-label::after { content: ': '; }
+.bookacti-refund-option-description  { font-size: 0.85em; font-style: italic; }
+.bookacti-refund-option-label,
+.bookacti-refund-option-description  { display: block; }
+#bookacti-refund-message textarea    { display: block; width: 100%; }
+
+#bookacti-reschedule-booking-dialog label:not(.bookacti-onoffswitch-label),
+.bookacti-backend-dialog.bookacti-bookings-dialog label:not(.bookacti-onoffswitch-label):not(.bookacti-refund-option-label) { display: inline-block; width: 150px; font-family: Arial,Helvetica,sans-serif; font-weight: bold; }
+.bookacti-backend-dialog.bookacti-bookings-dialog label.bookacti-fullwidth-label:not(.bookacti-onoffswitch-label):not(.bookacti-refund-option-label) { width: 100%; }
 	
 
 /***** RESPONSIVE DESIGN *****/
