--- a/css/global.css
+++ b/css/global.css
@@ -124,10 +124,30 @@
 }
 
 
-
-/** BOOKINGS **/
+/** DIALOGS **/
 .bookacti-bookings-dialog { display: none; }
+.bookacti-dialog,
+.bookacti-dialog.ui-dialog .ui-dialog-content { overflow: visible; }
+.bookacti-dialog ~ .ui-widget-overlay { position: fixed; top: 0; left: 0; width:100%; height:100%; background: #aaa; opacity: 0.4; z-index: 1; }
 
+.bookacti-dialog .ui-dialog-buttonpane { padding: .3em 1em .5em 1em !important; }
+.bookacti-dialog .ui-dialog-buttonpane .ui-dialog-buttonset { float: none !important; text-align: right; }
+
+.bookacti-dialog .ui-widget-header .ui-button.bookacti-dialog-left-button,
+.bookacti-dialog .ui-widget-content .ui-button.bookacti-dialog-left-button,
+.bookacti-dialog .ui-button.bookacti-dialog-left-button { float: left; }
+
+.bookacti-dialog .ui-widget-header .ui-button.bookacti-dialog-delete-button,
+.bookacti-dialog .ui-widget-content .ui-button.bookacti-dialog-delete-button,
+.bookacti-dialog .ui-button.bookacti-dialog-delete-button { border: 1px solid #a00; color: #a00; background: #fcf1f1; }
+
+.bookacti-dialog .ui-widget-header .ui-state-hover.bookacti-dialog-delete-button,
+.bookacti-dialog .ui-widget-content .ui-state-hover.bookacti-dialog-delete-button,
+.bookacti-dialog .ui-state-hover.bookacti-dialog-delete-button { border: 1px solid #dc3232; color: #dc3232; background: #fcf1f1; }
+
+.bookacti-dialog .ui-widget-header .ui-state-focus.bookacti-dialog-delete-button,
+.bookacti-dialog .ui-widget-content .ui-state-focus.bookacti-dialog-delete-button,
+.bookacti-dialog .ui-state-focus.bookacti-dialog-delete-button { border-color: #dc3232; color: #dc3232; box-shadow: 0 0 0 1px #dc3232; outline: 2px solid transparent; outline-offset: 0; }
 
 
 /** CALENDAR **/
@@ -193,14 +213,18 @@
 .bookacti-availability-container .bookacti-active-bookings-number,
 .bookacti-availability-container .bookacti-available-places-number { font-weight: bold; font-size: larger; }
 .bookacti-availability-container.bookacti-hide-availability        { display: none; }
-.bookacti-available-places-avail-particle::before                  { content: ' '; }
 
 .bookacti-available-places.bookacti-booked, 
 .bookacti-available-places.bookacti-not-booked      { background-color: rgba( 0, 0, 0, 0.4 ); }
 .bookacti-available-places.bookacti-full, 
 .bookacti-available-places.bookacti-no-availability { background-color: rgba( 255, 0, 0, 0.4 ); }
+.bookacti-available-places > span                   { display: inline-block; }
+.bookacti-available-places-unit-name.bookacti-has-unit-name,
+.bookacti-available-places-avail-particle           { margin-left: 2px; }
 
-.rtl .bookacti-availability-container { right: auto; left: 0; }
+.rtl .bookacti-available-places-unit-name.bookacti-has-unit-name,
+.rtl .bookacti-available-places-avail-particle      { margin-left: 0; margin-right: 2px; }
+.rtl .bookacti-availability-container               { right: auto; left: 0; }
 .rtl .bookacti-availability-container .bookacti-available-places { border-radius: 0 3px 0 0; }
 
 /* Loading */
@@ -228,14 +252,7 @@
 
 .bookacti-form-field-name-submit .bookacti-loading-container { margin-bottom: 0; }
 
-
-
-
-/** RESPONSIVE DESIGN **/
-
-/* Smartphone only */
 @media screen and ( max-width: 480px ) {
-	/* Loading */
 	.bookacti-loading-container { white-space: normal; }
 	.bookacti-loading-image,
 	.bookacti-loading-text      { display: block; margin: auto;  }
